--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,3 +14,22 @@ canvas { width: 100%; height: 100% }
     background-color: #000000;
 }
 
+#desc_container {
+    color: white;
+    position: fixed;
+    bottom: 0;
+    border: none;
+    background: rgba(0,0,0,.25);
+    padding-left: 2em;
+    max-width: 75%;
+}
+
+#description {
+    display: inline-block;
+}
+
+#desc_container > .next {
+    margin: 0 2em;
+    width: 4em;
+}
+
